# component_separation

./: .gitattributes  .gitignore  .gitmodule  .gitmodules  .readthedocs.yml  README.rst  TODO  TODO.todo  Untitled.ipynb  config.json  interactive.py  pipeline.sh  requirements.txt  setup.cfg  setup.py
.dvc/: config
component_separation/: Untitled.ipynb  __init__.py  access.py  analytic.py  app_map.py  app_misc.py  app_powerspectrum.py  app_smica.py  cachechecker.py  conf_rm.json  config.json  config_pico.py  config_planck.py  config_ps.json  config_ps.py  config_rm.json  cop.py  covariance.py  createfitsfiles.py  cs_util.py  dataverisoncontrol.py  generator_map.py  generator_powerspec.py  interactive.py  interface.py  io.py  io_NERSC.py  latest_results.ipynb  map.py  masking.py  noise_estimate.py  plancklens_interface.py  plot.py  pospace.py  powerspectrum.py  powspec.py  preprocess.py  rm_config.json  run.py  run_NERSC.py  (+16 more)
component_separation.egg-info/: top_level.txt
data/: FFP10_wdipole_lensedCls.html  README.rst  powspecplanck.txt
dev/: README.rst  TODO.todo  createfitsfiles.py  snippet.py
doc/: index.rst
docs/: conf.py  module_powspec.rst  modules.rst  requirements.txt
misc/: README.rst
notebooks/: Check Beams and Noise.ipynb  Check Improvement.ipynb  Compare to Maude-DX12.ipynb  Confidence Mask.ipynb  SmicaOutput.ipynb  Untitled.ipynb  increment.ipynb  smica_propag.ipynb  test.ipynb
test/: README.rst  createfitsfiles.py  general.py  interactive.py  snippet.py  test_general.py  test_spectrum.py  validate_smica.py  validate_spectrum.py  (+1 more)
(+39 files in other folders)
