[metadata]
name=component_separation
version = attr: component_separation.__VERSION__
description = attr: component_separation.__desctiption__
author = attr: component_separation.__author__
author_email = attr: component_separation.__author_email__
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
#long-description = file: description.rst

[options]
include_package_data = True
packages = find:
